--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,77 @@
 /* dev styles go here */
+body {
+    font-family: sans-serif;
+    margin: 0 auto;
+    width: 100%;
+}
+
+header {
+    background-color: #191919;
+}
+
+nav {
+    max-width: 78.75rem;
+    margin: 0 auto;
+}
+
+.nav-menu a {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: antiquewhite;
+    /* increase the size of the anchor tag to match the size of the li */
+    /* display: block; */
+    display: flex;
+    /* shift the text to left but still allow it to be clickable */
+    padding: 0 1rem;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.nav-menu a:hover,
+.nav-menu a:active {
+    color: #30d421;
+}
+
+ul li {
+    list-style: none;
+}
+
+.nav-menu li {
+    line-height: 3.75rem;
+    margin-bottom: 0.5rem;
+}
+
+.nav-menu svg {
+    width: 1.25rem;
+    fill: aliceblue;
+}
+
+.nav-menu path,
+.nav-menu rect {
+    fill: #fff;
+}
+
+.nav-menu svg:hover,
+.nav-menu path:hover,
+.nav-menu rect:hover {
+    fill: #08cd19;
+}
+
+@media screen and (min-width: 480px) {
+
+    .nav-menu {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .nav-menu li {
+        /* border: 1px solid white; */
+        /* flex-grow: 1; */
+        flex: 1 0 auto;
+    }
+
+    .nav-menu a {
+        text-align: center;
+        justify-content: center;
+    }
+}
